# Talk2DB

./: DESIGN.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  app.py  pyproject.toml  schema.sql
backend/app/: main.py
backend/app/application/rag/: __init__.py  bootstrap.py  database.py  evaluation.py  llm.py  schema_context.py  service.py  sql.py
backend/app/application/use_cases/: auth.py  conversations.py  messages.py  query_schemas.py  rag.py  rag_metrics.py  schemas.py  token.py  users.py
backend/app/core/: container.py  settings.py
backend/app/domain/: errors.py
backend/app/testing/: in_memory_conversations.py  in_memory_query_schemas.py  mock_assistant.py
backend/constants/: rag.py  sql.py
backend/docker/: Dockerfile
backend/evaluation/: sql_cases.json
backend/examples/: logistica_demo.sql  rag_prompts.md
backend/models/: chat.py  graph.py
backend/rag/: builder.py  schema.py  sql.py
backend/scripts/: evaluate_sql_generation.py
backend/tests/: conftest.py  test_auth_protection.py  test_conversations.py  test_health.py  test_query_schemas.py  test_rag.py  test_rag_bootstrap.py  test_rag_completion.py  test_rag_llm.py  test_rag_metrics.py  test_rag_service.py  test_repository.py  test_sql_evaluation.py  test_use_cases.py  test_users.py
frontend/: Dockerfile  angular.json  app.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
frontend/api/: api.py
frontend/docker/: Dockerfile  Dockerfile.dev
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.html  app.spec.ts  app.ts
(+204 files in other folders)
