[project]
name = "talk2db-backend"
version = "0.1.0"
description = "Talk2DB backend API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "dependency-injector>=4.42.0",
  "greenlet>=3.0.0",
  "asyncpg>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "PyJWT>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4",
  "email-validator>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-multipart>=0.0.9",
  "sqlglot>=25.0.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "qdrant-client>=1.12.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "httpx>=0.27.0",
  "python-docx>=1.2.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
