[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "talk2db-frontend"
version = "0.1.0"
description = "Gradio frontend for Talk2DB"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.44,<7",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[tool.setuptools]
py-modules = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
